package org.example.server.services;

import org.example.server.model.dto.*;
import org.example.server.model.entity.*;
import org.example.server.model.enums.FileState;
import org.example.server.repos.EditorSessionRepository;
import org.example.server.repos.FileRepository;
import org.example.server.repos.RepoRepository;
import org.example.server.repos.TokensRepository;
import org.example.server.repos.UserRepoRepository;
import org.example.server.repos.UserRepository;
import org.example.server.integrations.RepTrackerClient;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import org.springframework.transaction.annotation.Propagation;
import org.springframework.transaction.support.TransactionSynchronization;
import org.springframework.transaction.support.TransactionSynchronizationManager;
import org.springframework.web.multipart.MultipartFile;

import java.io.IOException;
import java.nio.file.Paths;
import java.time.OffsetDateTime;
import java.util.List;
import java.util.Optional;
import java.util.UUID;
import java.util.stream.Collectors;

@Service
public class RepoService {
    private static final Logger log = LoggerFactory.getLogger(RepoService.class);
    private final UserRepository userRepository;
    private final RepoRepository repoRepository;
    private final UserRepoRepository userRepoRepository;
    private final FileRepository fileRepository;
    private final EditorSessionRepository editorSessionRepository;
    private final StorageService storageService;
    private final TokensRepository tokensRepository;
    private final GitHubClientImpl gitHubClient;
    private final RepTrackerClient repTrackerClient;

    public RepoService(UserRepository userRepository,
                       RepoRepository repoRepository,
                       UserRepoRepository userRepoRepository,
                       FileRepository fileRepository,
                       EditorSessionRepository editorSessionRepository,
                       StorageService storageService,
                       TokensRepository tokensRepository,
                       GitHubClientImpl gitHubClient,
                       RepTrackerClient repTrackerClient) {
        this.userRepository = userRepository;
        this.repoRepository = repoRepository;
        this.userRepoRepository = userRepoRepository;
        this.fileRepository = fileRepository;
        this.editorSessionRepository = editorSessionRepository;
        this.storageService = storageService;
        this.tokensRepository = tokensRepository;
        this.gitHubClient = gitHubClient;
        this.repTrackerClient = repTrackerClient;
    }

    @Transactional
    public String addRepository(AddRepositoryRequest request) {
        log.info("Starting addRepository process: chatId={}, repositoryUrl={}", request.chatId(), request.repositoryUrl());
        log.info("Transaction status: active={}, readOnly={}", 
            TransactionSynchronizationManager.isActualTransactionActive(),
            TransactionSynchronizationManager.isCurrentTransactionReadOnly());
        
        try {
            // Step 1: Get or create user
            log.info("Step 1: Finding user for chatId={}", request.chatId());
            User user = requireUser(request.chatId());
            log.info("Found user: id={}, chatId={}", user.getId(), user.getChatId());
            
            // Step 2: Get or create repository
            log.info("Step 2: Finding/creating repository for URL={}", request.repositoryUrl());
            Repo repo = repoRepository.findByUrl(request.repositoryUrl())
                    .orElseGet(() -> {
                        log.info("Creating new repository for URL={}", request.repositoryUrl());
                        Repo r = new Repo();
                        r.setUrl(request.repositoryUrl());
                        String[] parts = parseOwnerAndName(request.repositoryUrl());
                        r.setOwner(parts[0]);
                        r.setName(parts[1]);
                        r.setAddedAt(OffsetDateTime.now());
                        Repo saved = repoRepository.save(r);
                        log.info("Created repository: id={}, owner={}, name={}", saved.getId(), saved.getOwner(), saved.getName());
                        
                        // Force flush to ensure it's written to DB
                        repoRepository.flush();
                        log.info("Repository flushed to database");
                        
                        // Verify repository was actually saved
                        repoRepository.findById(saved.getId())
                            .ifPresentOrElse(
                                foundRepo -> log.info("Repository verified in database: id={}, url={}", foundRepo.getId(), foundRepo.getUrl()),
                                () -> log.info("REPOSITORY NOT FOUND IN DATABASE AFTER SAVE! id={}", saved.getId())
                            );
                        
                        return saved;
                    });
            log.info("Repository: id={}, url={}", repo.getId(), repo.getUrl());
            
            // Step 3: Link user to repository if not already linked
            log.info("Step 3: Checking if user {} already linked to repo {}", user.getId(), repo.getId());
            boolean linked = userRepoRepository.findByUserAndRepo_Id(user, repo.getId()).isPresent();
            if (!linked) {
                log.info("Creating user-repo link: userId={}, repoId={}", user.getId(), repo.getId());
                UserRepo link = new UserRepo();
                UserRepoId linkId = new UserRepoId();
                linkId.setUserId(user.getId());
                linkId.setRepoId(repo.getId());
                link.setId(linkId);
                link.setUser(user);
                link.setRepo(repo);
                link.setAddedAt(OffsetDateTime.now());
                userRepoRepository.save(link);
                userRepoRepository.flush();
                log.info("User-repo link created successfully");
            } else {
                log.info("User-repo link already exists");
            }

            // Step 4: Sync repository tree from GitHub
            log.info("Step 4: Syncing repository tree from GitHub");
            try {
                syncRepoTreeFromGitHub(user, repo);
                log.info("Repository tree synced successfully");
            } catch (Exception e) {
                log.info("Failed to sync repository tree: {}", e.getMessage(), e);
                // Continue anyway - this shouldn't block repo addition
            }
            
            log.info("Repository addition completed successfully: chatId={}, repositoryUrl={}", 
                    request.chatId(), request.repositoryUrl());
            
            // Call gRPC service after transaction commit
            TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
                @Override
                public void afterCommit() {
                    log.info("Transaction committed, notifying RepTracker service");
                    notifyRepTrackerService(repo.getUrl(), user.getChatId());
                }
            });
            
            return "–†–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–π –¥–æ–±–∞–≤–ª–µ–Ω";
            
        }catch(Exception e){
            log.info("Failed to add repository: chatId={}, repositoryUrl={}, error={}", 
                    request.chatId(), request.repositoryUrl(), e.getMessage(), e);
            throw e;
        }
    }

    @Transactional(propagation = Propagation.REQUIRES_NEW)
    public void notifyRepTrackerService(String repoUrl, Long chatId) {
        log.info("Step 5: Notifying RepTracker service: repoUrl={}, chatId={}", repoUrl, chatId);
        try {
            repTrackerClient.addTrackingRepo(repoUrl, chatId);
            log.info("RepTracker service notified successfully");
        } catch (Exception e) {
            log.info("Failed to notify RepTracker service: repoUrl={}, chatId={}, error={}", 
                    repoUrl, chatId, e.getMessage(), e);
            // Don't throw - repo is already added, just tracking might fail
        }
    }

    @Transactional
    public String uploadFile(Long chatId, String path, MultipartFile multipartFile) {
        User user = requireUser(chatId);
        Repo repo = requireUserRepo(user);
        String cleanPath = Paths.get(path).normalize().toString();
        String objectKey = repo.getId() + "/" + cleanPath;
        byte[] bytes;
        try {
            bytes = multipartFile.getBytes();
        } catch (IOException e) {
            throw new IllegalStateException("–ù–µ —É–¥–∞–ª–æ—Å—å –ø—Ä–æ—á–∏—Ç–∞—Ç—å —Ñ–∞–π–ª", e);
        }
        
        log.info("–ó–∞–≥—Ä—É–∑–∫–∞ —Ñ–∞–π–ª–∞: chatId={}, repo={}, path={}, objectKey={}, size={} bytes", 
                chatId, repo.getUrl(), cleanPath, objectKey, bytes.length);
        
        // –°–Ω–∞—á–∞–ª–∞ –∫–ª–∞–¥–µ–º –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ; –µ—Å–ª–∏ –ë–î –ø–∞–¥–∞–µ—Ç, —É–¥–∞–ª–∏–º –æ–±—ä–µ–∫—Ç. –ï—Å–ª–∏ MinIO –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω ‚Äî –∫–∏–¥–∞–µ–º –∏—Å–∫–ª—é—á–µ–Ω–∏–µ, —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏—è –æ—Ç–∫–∞—Ç–∏—Ç—Å—è.
        try {
            storageService.putObject(objectKey, bytes, multipartFile.getContentType());
            log.info("–§–∞–π–ª —É—Å–ø–µ—à–Ω–æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω –≤ MinIO: {}", objectKey);
        } catch (RuntimeException ex) {
            log.warn("–ù–µ —É–¥–∞–ª–æ—Å—å —Å–æ—Ö—Ä–∞–Ω–∏—Ç—å –æ–±—ä–µ–∫—Ç {} –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ: {}", objectKey, ex.getMessage());
            throw new IllegalStateException("–ù–µ —É–¥–∞–ª–æ—Å—å —Å–æ—Ö—Ä–∞–Ω–∏—Ç—å —Ñ–∞–π–ª –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ", ex);
        }
        try {
            File fileEntity = fileRepository.findByRepoAndPath(repo, cleanPath).orElseGet(File::new);
            fileEntity.setRepo(repo);
            fileEntity.setPath(cleanPath);
            fileEntity.setStorageKey(objectKey);
            fileEntity.setState(FileState.ADDED);
            fileEntity.setCreatedAt(Optional.ofNullable(fileEntity.getCreatedAt()).orElse(OffsetDateTime.now()));
            fileEntity.setUpdatedAt(OffsetDateTime.now());
            fileRepository.save(fileEntity);
            log.info("–§–∞–π–ª —É—Å–ø–µ—à–Ω–æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω –≤ –ë–î: path={}, storageKey={}", cleanPath, objectKey);
        } catch (RuntimeException ex) {
            // –û—Ç–∫–∞—Ç –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ, –µ—Å–ª–∏ –ë–î –Ω–µ —Å–æ—Ö—Ä–∞–Ω–∏–ª–∞—Å—å
            try {
                storageService.deleteObject(objectKey);
            } catch (Exception cleanup) {
                log.warn("–ù–µ —É–¥–∞–ª–æ—Å—å —É–¥–∞–ª–∏—Ç—å –æ–±—ä–µ–∫—Ç {} –ø–æ—Å–ª–µ –æ—à–∏–±–∫–∏ –ë–î: {}", objectKey, cleanup.getMessage());
            }
            throw ex;
        }
        return "–§–∞–π–ª —Å–æ—Ö—Ä–∞–Ω–µ–Ω";
    }

    @Transactional
    public EditLinkResponse requestEditLink(RequestEditLink request) {
        User user = requireUser(request.chatId());
        Repo repo = requireUserRepo(user);
        File file = fileRepository.findByRepoAndPath(repo, request.path())
                .orElseThrow(() -> new IllegalArgumentException("–§–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω"));
        String link = "https://editor.local/session/" + UUID.randomUUID();
        var session = new org.example.server.model.entity.EditorSession();
        session.setFile(file);
        session.setSessionUrl(link);
        session.setForUser(user);
        session.setCreatedAt(OffsetDateTime.now());
        session.setExpiresAt(OffsetDateTime.now().plusHours(1));
        editorSessionRepository.save(session);
        return new EditLinkResponse(link);
    }

    @Transactional
    public String deleteFile(DeleteFileRequest request) {
        User user = requireUser(request.chatId());
        Repo repo = requireUserRepo(user);
        File file = fileRepository.findByRepoAndPath(repo, request.path())
                .orElseThrow(() -> new IllegalArgumentException("–§–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω"));
        // –ü–æ–º–µ—á–∞–µ–º –∫–∞–∫ –æ–∂–∏–¥–∞–µ—Ç —É–¥–∞–ª–µ–Ω–∏—è, –ø–æ—Ç–æ–º –ø—ã—Ç–∞–µ–º—Å—è —É–¥–∞–ª–∏—Ç—å –∏–∑ S3
        file.setState(FileState.PENDING_DELETE);
        file.setUpdatedAt(OffsetDateTime.now());
        fileRepository.save(file);

        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
            @Override
            public void afterCommit() {
                try {
                    if (file.getStorageKey() != null) {
                        storageService.deleteObject(file.getStorageKey());
                    }
                    fileRepository.findById(file.getId()).ifPresent(fresh -> {
                        fresh.setState(FileState.DELETED);
                        fresh.setUpdatedAt(OffsetDateTime.now());
                        fileRepository.save(fresh);
                    });
                } catch (Exception e) {
                    log.warn("–ù–µ —É–¥–∞–ª–æ—Å—å —É–¥–∞–ª–∏—Ç—å –æ–±—ä–µ–∫—Ç {}: {}", file.getStorageKey(), e.getMessage());
                }
            }
        });
        return "–§–∞–π–ª –ø–æ–º–µ—á–µ–Ω –∫ —É–¥–∞–ª–µ–Ω–∏—é";
    }

    @Transactional
    public String pushRepository(PushRepositoryRequest request) {
        User user = requireUser(request.chatId());
        Repo repo = requireUserRepo(user);
        
        log.info("–ó–∞–ø—Ä–æ—Å push –æ—Ç chatId {} –¥–ª—è —Ä–µ–ø–æ {}", user.getChatId(), repo.getUrl());
        
        try {
            // –ü–æ–ª—É—á–∞–µ–º —Ç–æ–∫–µ–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
            String token = tokensRepository.findByUser(user)
                    .map(Token::getToken)
                    .orElseThrow(() -> new IllegalStateException("–ù–µ—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω–æ–≥–æ —Ç–æ–∫–µ–Ω–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"));
            
            // –û–ø—Ä–µ–¥–µ–ª—è–µ–º –≤–µ—Ç–∫—É
            String branch = gitHubClient.resolveDefaultBranch(token, repo.getOwner(), repo.getName());
            
            // –ü–æ–ª—É—á–∞–µ–º —Ç–æ–ª—å–∫–æ —Ñ–∞–π–ª—ã, –∫–æ—Ç–æ—Ä—ã–µ –µ—Å—Ç—å –ª–æ–∫–∞–ª—å–Ω–æ –≤ MinIO
            List<File> userFiles = fileRepository.findByRepo(repo).stream()
                    .filter(file -> file.getStorageKey() != null) // –¢–æ–ª—å–∫–æ —Ñ–∞–π–ª—ã –≤ MinIO
                    .collect(Collectors.toList());
            
            log.info("–ù–∞–π–¥–µ–Ω–æ {} —Ñ–∞–π–ª–æ–≤ –≤ MinIO –¥–ª—è —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏—è {}", userFiles.size(), repo.getUrl());
            userFiles.forEach(file -> log.info("–§–∞–π–ª –≤ MinIO: {} (storageKey: {})", file.getPath(), file.getStorageKey()));
            
            if (userFiles.isEmpty()) {
                return "–ù–µ—Ç —Ñ–∞–π–ª–æ–≤ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –≤ —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–π";
            }
            
            int successCount = 0;
            int conflictCount = 0;
            StringBuilder result = new StringBuilder();
            
            for (File file : userFiles) {
                try {
                    // –ü–æ–ª—É—á–∞–µ–º –∫–æ–Ω—Ç–µ–Ω—Ç —Ñ–∞–π–ª–∞
                    byte[] contentBytes;
                    if (file.getStorageKey() != null) {
                        contentBytes = storageService.getObjectBytes(file.getStorageKey());
                    } else {
                        contentBytes = downloadAndCacheFile(user, repo, file.getPath(), file);
                    }
                    String content = new String(contentBytes);
                    
                    // –ü–æ–ª—É—á–∞–µ–º —Ç–µ–∫—É—â–∏–π SHA —Ñ–∞–π–ª–∞
                    String currentSha = gitHubClient.getFileSha(token, repo.getOwner(), repo.getName(), file.getPath(), branch);
                    
                    // –ï—Å–ª–∏ —Ñ–∞–π–ª –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç –≤ GitHub, —Å–æ–∑–¥–∞–µ–º –µ–≥–æ
                    if (currentSha == null) {
                        gitHubClient.updateFile(token, repo.getOwner(), repo.getName(), 
                                file.getPath(), content, "Add " + file.getPath(), null);
                        log.info("–°–æ–∑–¥–∞–Ω –Ω–æ–≤—ã–π —Ñ–∞–π–ª: {}", file.getPath());
                        successCount++;
                    } else {
                        // –û–±–Ω–æ–≤–ª—è–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π —Ñ–∞–π–ª
                        gitHubClient.updateFile(token, repo.getOwner(), repo.getName(), 
                                file.getPath(), content, "Update " + file.getPath(), currentSha);
                        log.info("–û–±–Ω–æ–≤–ª–µ–Ω —Ñ–∞–π–ª: {}", file.getPath());
                        successCount++;
                    }
                    
                } catch (Exception e) {
                    if (e.getMessage() != null && e.getMessage().startsWith("CONFLICT:")) {
                        log.warn("–ö–æ–Ω—Ñ–ª–∏–∫—Ç –ø—Ä–∏ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–∏ —Ñ–∞–π–ª–∞ {}: {}", file.getPath(), e.getMessage());
                        conflictCount++;
                        result.append("‚ùå ").append(file.getPath())
                              .append(": ").append(e.getMessage()).append("\n");
                    } else {
                        log.error("–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ —Ñ–∞–π–ª–∞ {}: {}", file.getPath(), e.getMessage());
                        result.append("‚ö†Ô∏è ").append(file.getPath())
                              .append(": ").append(e.getMessage()).append("\n");
                    }
                }
            }
            
            // –§–æ—Ä–º–∏—Ä—É–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç
            if (successCount > 0 && conflictCount == 0) {
                result.insert(0, "‚úÖ –£—Å–ø–µ—à–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–æ —Ñ–∞–π–ª–æ–≤: ").insert(0, successCount).append("\n");
            } else if (conflictCount > 0) {
                result.insert(0, "‚ö†Ô∏è –û–±–Ω–∞—Ä—É–∂–µ–Ω–æ –∫–æ–Ω—Ñ–ª–∏–∫—Ç–æ–≤: ").insert(0, conflictCount).append("\n");
                result.append("\nüí° –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, —Ä–∞–∑—Ä–µ—à–∏—Ç–µ –∫–æ–Ω—Ñ–ª–∏–∫—Ç—ã –≤—Ä—É—á–Ω—É—é –∏ –ø–æ–≤—Ç–æ—Ä–∏—Ç–µ –ø–æ–ø—ã—Ç–∫—É.");
            }
            
            if (successCount == 0 && conflictCount == 0) {
                return "–ù–µ—Ç —Ñ–∞–π–ª–æ–≤ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∏–ª–∏ –ø—Ä–æ–∏–∑–æ—à–ª–∞ –æ—à–∏–±–∫–∞";
            }
            
            return result.toString().trim();
            
        } catch (Exception e) {
            log.error("–û—à–∏–±–∫–∞ –ø—Ä–∏ push —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏—è: {}", e.getMessage(), e);
            return "–û—à–∏–±–∫–∞: " + e.getMessage();
        }
    }

    @Transactional(readOnly = true)
    public String repoTree(Long chatId) {
        User user = requireUser(chatId);
        Repo repo = requireUserRepo(user);
        List<File> files = fileRepository.findByRepo(repo);
        if (files.isEmpty()) {
            return "–†–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–π –ø—É—Å—Ç";
        }
        return files.stream()
                .map(File::getPath)
                .sorted()
                .collect(Collectors.joining("\n"));
    }

    @Transactional(readOnly = true)
    public List<TreeEntryDto> listEntries(Long chatId, String parentPath) {
        User user = requireUser(chatId);
        Repo repo = requireUserRepo(user);
        String normalized = parentPath == null ? "" : parentPath;
        if (!normalized.isEmpty() && normalized.startsWith("/")) {
            normalized = normalized.substring(1);
        }
        final String prefix = normalized.isEmpty() ? "" : normalized + "/";
        List<File> files = fileRepository.findByRepo(repo);
        return files.stream()
                .map(File::getPath)
                .filter(p -> p.startsWith(prefix))
                .map(p -> p.substring(prefix.length()))
                .filter(p -> !p.isEmpty())
                .map(p -> {
                    int slash = p.indexOf('/');
                    boolean dir = slash >= 0;
                    String name = dir ? p.substring(0, slash) : p;
                    String fullPath = dir ? prefix + name : prefix + name;
                    return new TreeEntryDto(name, fullPath, dir);
                })
                .collect(Collectors.toMap(TreeEntryDto::path, t -> t, (a, b) -> a)) // remove duplicates
                .values()
                .stream()
                .sorted((a, b) -> {
                    if (a.directory() == b.directory()) {
                        return a.name().compareTo(b.name());
                    }
                    return a.directory() ? -1 : 1;
                })
                .collect(Collectors.toList());
    }

    @Transactional(readOnly = true)
    public String getFileContent(Long chatId, String path) {
        FileDownload download = downloadFile(chatId, path);
        return new String(download.bytes());
    }

    @Transactional
    public FileDownload downloadFile(Long chatId, String path) {
        User user = requireUser(chatId);
        Repo repo = requireUserRepo(user);
        String cleanPath = path.startsWith("/") ? path.substring(1) : path;
        File file = fileRepository.findByRepoAndPath(repo, cleanPath)
                .orElseThrow(() -> new IllegalArgumentException("–§–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω"));

        byte[] contentBytes;
        if (file.getStorageKey() != null) {
            try {
                contentBytes = storageService.getObjectBytes(file.getStorageKey());
            } catch (RuntimeException e) {
                log.warn("–ù–µ —É–¥–∞–ª–æ—Å—å –ø—Ä–æ—á–∏—Ç–∞—Ç—å –∏–∑ —Ö—Ä–∞–Ω–∏–ª–∏—â–∞ {}, –ø–æ–ø—Ä–æ–±—É–µ–º —Å–∫–∞—á–∞—Ç—å –∏–∑ GitHub", file.getStorageKey());
                contentBytes = downloadAndCacheFile(user, repo, cleanPath, file);
            }
        } else {
            contentBytes = downloadAndCacheFile(user, repo, cleanPath, file);
        }
        String fileName = cleanPath.contains("/") ? cleanPath.substring(cleanPath.lastIndexOf('/') + 1) : cleanPath;
        return new FileDownload(fileName, contentBytes);
    }

    private byte[] downloadAndCacheFile(User user, Repo repo, String path, File file) {
        String token = tokensRepository.findByUser(user)
                .map(Token::getToken)
                .orElseThrow(() -> new IllegalStateException("–ù–µ—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω–æ–≥–æ —Ç–æ–∫–µ–Ω–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"));
        String branch = repo.getOwner() != null ? gitHubClient.resolveDefaultBranch(token, repo.getOwner(), repo.getName()) : "main";
        byte[] bytes = gitHubClient.downloadFile(token, repo.getOwner(), repo.getName(), path, branch);
        String objectKey = repo.getId() + "/" + path;
        storageService.putObject(objectKey, bytes, "application/octet-stream");
        file.setStorageKey(objectKey);
        file.setUpdatedAt(OffsetDateTime.now());
        fileRepository.save(file);
        return bytes;
    }

    private void syncRepoTreeFromGitHub(User user, Repo repo) {
        String token = tokensRepository.findByUser(user)
                .map(Token::getToken)
                .orElseThrow(() -> new IllegalStateException("–ù–µ—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω–æ–≥–æ —Ç–æ–∫–µ–Ω–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"));
        String branch = gitHubClient.resolveDefaultBranch(token, repo.getOwner(), repo.getName());
        List<GitHubTreeItem> items = gitHubClient.fetchRepoTree(token, repo.getOwner(), repo.getName(), branch);
        items.stream()
                .filter(GitHubTreeItem::isFile)
                .forEach(item -> {
                    String path = item.path();
                    File file = fileRepository.findByRepoAndPath(repo, path).orElseGet(File::new);
                    file.setRepo(repo);
                    file.setPath(path);
                    file.setState(FileState.ADDED);
                    file.setCreatedAt(Optional.ofNullable(file.getCreatedAt()).orElse(OffsetDateTime.now()));
                    file.setUpdatedAt(OffsetDateTime.now());
                    fileRepository.save(file);
                });
    }

    @Transactional
    public void retryPendingDeletes() {
        fileRepository.findAll().stream()
                .filter(f -> f.getState() == FileState.PENDING_DELETE)
                .forEach(file -> {
                    try {
                        if (file.getStorageKey() != null) {
                            storageService.deleteObject(file.getStorageKey());
                        }
                        file.setState(FileState.DELETED);
                        file.setUpdatedAt(OffsetDateTime.now());
                        fileRepository.save(file);
                    } catch (Exception e) {
                        log.warn("–ü–æ–≤—Ç–æ—Ä–Ω–æ–µ —É–¥–∞–ª–µ–Ω–∏–µ –æ–±—ä–µ–∫—Ç–∞ {} –Ω–µ —É–¥–∞–ª–æ—Å—å: {}", file.getStorageKey(), e.getMessage());
                    }
                });
    }

    private User requireUser(Long chatId) {
        return userRepository.findByChatId(chatId)
                .orElseThrow(() -> new IllegalArgumentException("–ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –Ω–µ –Ω–∞–π–¥–µ–Ω"));
    }

    private Repo requireUserRepo(User user) {
        return userRepoRepository.findFirstByUser(user)
                .map(UserRepo::getRepo)
                .orElseThrow(() -> new IllegalArgumentException("–£ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è –Ω–µ –ø—Ä–∏–≤—è–∑–∞–Ω —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–π"));
    }

    private String[] parseOwnerAndName(String url) {
        try {
            String trimmed = url.replaceAll(".git$", "");
            String[] parts = trimmed.split("/");
            String owner = parts[parts.length - 2];
            String name = parts[parts.length - 1];
            return new String[]{owner, name};
        } catch (Exception e) {
            return new String[]{"unknown", "unknown"};
        }
    }
}
